# graphic-project-1

./: CMakeLists.txt  differencer.cxx
differencer/: CMakeLists.txt  differencer.cxx
project1a/: .project1A.cxx.kate-swp  CMakeLists.txt  project1A.cxx
project1b/: CMakeLists.txt  messedUp.cxx  project1B.cxx  save.cxx
project1c/: CMakeLists.txt  project1C.cxx  reader.cxx
project1d/: .project1C.cxx.swp  CMakeLists.txt  old_project1D.cxx  project1D.cxx  project1D_b.cxx  project1D_withoutScreen.cxx
project1e/: CMakeLists.txt  project1E.cxx  reader1e.cxx
project1f/: CMakeLists.txt  Camera.cxx  Matrix.cxx  project1F.cxx  reader1e.cxx  shading.cxx
