cmake_minimum_required(VERSION 2.8)

PROJECT(project1E)
SET(VTK_DIR /home/sean/Documents/VTK)
SET(CMAKE_BUILD_TYPE Debug)
SET(VERBOSE 1)

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})

add_executable(project1E MACOSX_BUNDLE project1E)

if(VTK_LIBRARIES)
  target_link_libraries(project1E ${VTK_LIBRARIES})
else()
  target_link_libraries(project1E vtkHybrid)
endif()

